--- a/index.html
+++ b/index.html
@@ -19,56 +19,8 @@
         <div class="row">
             <div class="pokemon-card-graper">
                 <div class="pokemon-card" id="pokemon-card">
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
+                    <!-- <div id="pokemon-card-number" class="pokemon-card-number">2</div> -->
 
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
-                </div>
-            </div>
-            <div class="pokemon-card-graper">
-                <div class="pokemon-card">
-
-                    <div class="pokemon-card-name">pokemon</div>
-                    <div class="pokemon-card-number">2</div>
                 </div>
             </div>
         </div>
